--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@ keep_files: [images]
 permalink: /:categories/:title/
 
 # PRE
-url: http://localhost:3000
-baseurl: ''
+# url: http://localhost:3000
+# baseurl: ''
 
 # PRE-PROD
-url: https://davidgallardo.github.io
-baseurl: ''
+# url: https://davidgallardo.github.io
+# baseurl: ''
 
 # PROD
-# url: http://dgallardo.com
-# baseurl: ''
+url: http://dgallardo.com
+baseurl: ''
 
 
 
