--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "del": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-image": "^4.4.1",
+    "gulp-image": "^5.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^1.1.7",
+    "undertaker": "^1.2.1",
     "vinyl-paths": "^2.1.0"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
